--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,8 @@ env:
 
 phases:
   install:
+    runtime-versions:
+      java: openjdk8
     commands:
       - echo Test S3 calls
       - aws s3 ls
