add listin repo command

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,9 @@ phases:
     runtime-versions:
       java: corretto11
     commands:
-      - echo Test S3 calls
+      - echo List repo files
+      - ls -la
+      - echo List bucket files
       - aws s3 ls s3://awsquizlabs.com
     finally:
       - echo This always runs even if the update or install command fails
