--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,7 @@ phases:
     runtime-versions:
       java: corretto11
     commands:
-      - echo List repo files
-      - ls -la
+      - aws s3 sync ./static-site s3://awsquizlabs.com --recursive
       - echo List bucket files
       - aws s3 ls s3://awsquizlabs.com
     finally:
